<resources>
    <string name="app_name">ModBus Talker</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="ip_label">IP:</string>
    <string name="port_label">Port:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="register_settings">Register settings</string>
    <string name="choose_register">Register to watch</string>
    <string name="choose_register_msg">Input the address and name of register to watch</string>
    <string name="input_error_not_numerical">Inputted text in not a number!</string>
    <string name="base_ip">...</string>
    <string name="base_port">502</string>
    <string name="register_watch_error">Register %2$d watch error: %1$s</string>
    <string name="input_error_register_already_watched">Register %1$d already watched!</string>
    <string name="delete_register_title">Delete register?</string>
    <string name="delete_register_text">Are you sure you want to delete this register?</string>
    <string name="error_response_1">Register %2$d error %1$d: Illegal function code</string>
    <string name="error_response_2">Register %2$d error %1$d: Illegal data address</string>
    <string name="error_response_3">Register %2$d error %1$d: Illegal data value</string>
    <string name="error_response_4">Register %2$d error %1$d: Slave device failure</string>
    <string name="error_response_5">Register %2$d error %1$d: Request accepted and processing, but it will take a long time</string>
    <string name="error_response_6">Register %2$d error %1$d: The slave is busy processing. Repeat later</string>
    <string name="error_response_7">Register %2$d error %1$d: The slave can not execute the program function specified</string>
    <string name="error_response_8">Register %2$d error %1$d: The slave detected a parity error when reading the extended memory</string>
    <string name="error_response_10">Register %2$d error %1$d: Gateway Path Unavailable. Gateway is misconfigured or overloaded</string>
    <string name="error_response_11">Register %2$d error %1$d: Gateway target device failed to respond</string>
    <string name="error_response_unknown">Register %1$d error: Unknown error</string>
    <string name="error_transaction_not_found">Register corresponding to transaction not found</string>
    <string name="register_to_watch">Register №\nto watch</string>
    <string name="type_int16">Int16</string>
    <string name="type_uint16">UInt16</string>
    <string name="type_int32">Int32</string>
    <string name="type_real32">Real32</string>
    <string name="prefs_saved_ip">saved_ip</string>
    <string name="prefs_saved_port">saved_port</string>
    <string name="register_name_label">Register name</string>
    <string name="input_error_name">No name for register!</string>
    <string name="input_error_new_value">Inputted new value is not right</string>
    <string name="register_name">Reg. №</string>
    <string name="register_to_change_label">Register №</string>
    <string name="new_value_label">New value:</string>
    <string name="send_button">Send</string>
    <string name="ip_dot">.</string>
</resources>